fix: dark mode for URLs better styled and CSS code cleaned

--- a/src/components/panelConnectivity/panelConnectivity.css
+++ b/src/components/panelConnectivity/panelConnectivity.css
@@ -124,7 +124,7 @@ label {
 
 /* URL that shows up on hover */
 
-.url-hover-server{
+.url-hover{
 
     background-color: #fff;
     display: inline-block !important;
@@ -137,26 +137,15 @@ label {
 
 }
 
-.url-hover-hide-server{
+.url-hide{
     overflow:hidden;
 }
 
-.url-hover-swaps{
-
-    background-color: #fff;
-    display: inline-block !important;
-    position:absolute;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-    border:0.5px solid rgba(0, 0, 0, 0.15);
-    z-index: 1;
-    font-size:0.725rem;
-    margin-left: 0.5%;
-    
+.dark-mode .url-hover{
+    background-color: #202020;
+    box-shadow: rgba(0, 0, 0, 1) 0px 3px 3px 0px;
 }
 
-.url-hover-hide-swaps{
-    overflow:hidden;
-}
 
 @media only screen and (max-width: 768px) {
     .Body.small {
